// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowEvent renders the page not found error page. 1`] = `
<Error
  statusCode="404"
/>
`;

exports[`ShowEvent renders the page with error messages. 1`] = `
<div>
  <h3>
    This is the event page!
  </h3>
  <EventComponent
    event={
      Object {
        "description": "This is the first event.",
        "errors": Array [
          "nameを入力してください",
          "nameは１０文字以内です",
        ],
        "id": 1,
        "name": "event1",
        "participants": Array [],
        "quota": 10,
      }
    }
  />
  <ParticipantForm
    eventId={1}
    hasEventWaitlist={false}
    onSubmit={[Function]}
  />
  <ParticipantsList
    participants={
      Array [
        Object {
          "eventId": 1,
          "id": 1,
          "name": "participant1",
        },
        Object {
          "eventId": 1,
          "id": 2,
          "name": "participant2",
        },
      ]
    }
  />
</div>
`;

exports[`ShowEvent when available to participate renders the event page with participate text. 1`] = `
<div>
  <h3>
    This is the event page!
  </h3>
  <EventComponent
    event={
      Object {
        "description": "This is the first event.",
        "id": 1,
        "name": "event1",
        "participants": Array [],
        "quota": 10,
      }
    }
  />
  <ParticipantForm
    eventId={1}
    hasEventWaitlist={false}
    onSubmit={[Function]}
  />
  <ParticipantsList
    participants={
      Array [
        Object {
          "eventId": 1,
          "id": 1,
          "name": "participant1",
        },
        Object {
          "eventId": 1,
          "id": 2,
          "name": "participant2",
        },
      ]
    }
  />
</div>
`;

exports[`ShowEvent when having a waiting list renders the event page wtih waitlisted text. 1`] = `
<div>
  <h3>
    This is the event page!
  </h3>
  <EventComponent
    event={
      Object {
        "description": "This is the first event.",
        "id": 1,
        "name": "event1",
        "participants": Array [],
        "quota": 10,
      }
    }
  />
  <ParticipantForm
    eventId={1}
    hasEventWaitlist={true}
    onSubmit={[Function]}
  />
  <ParticipantsList
    participants={
      Array [
        Object {
          "eventId": 1,
          "id": 1,
          "name": "participant1",
        },
        Object {
          "eventId": 1,
          "id": 2,
          "name": "participant2",
        },
      ]
    }
  />
</div>
`;
